# shared-context-engineering

./: .envrc  .gitattributes  .gitignore  .version  AGENTS.md  LICENSE  README.md  biome.json  flake.nix  manual-test-turso-sync.sh  package-lock.json  poem_nature.md  poem_people.md
.claude/: settings.json
.github/: dependabot.yml
cli/: Cargo.toml  README.md  build.rs  flake.nix
cli/assets/hooks/: commit-msg  post-commit  post-rewrite  pre-commit
cli/migrations/: 001_create_agent_traces.sql  001_create_diff_traces.sql
cli/migrations/agent-trace/: 001_create_diff_traces.sql  002_create_patch_intersections.sql  002_create_post_commit_patch_intersections.sql  003_create_agent_traces.sql  004_create_agent_traces.sql  004_create_diff_traces_time_ms_id_index.sql  005_add_diff_traces_model_id.sql  005_create_agent_traces_agent_trace_id_index.sql  006_add_agent_traces_agent_trace_id.sql  006_add_agent_traces_vcs_remote_url.sql  007_add_diff_traces_tool_metadata_columns.sql  007_create_agent_traces_vcs_remote_url_index.sql  008_add_diff_traces_tool_version_column.sql  008_create_messages.sql  009_add_diff_traces_payload_type.sql  009_create_parts.sql  010_create_messages_session_message_unique_index.sql  011_create_messages_session_order_index.sql  012_create_parts_session_message_order_index.sql  013_create_messages_updated_at_trigger.sql  014_create_parts_updated_at_trigger.sql  015_create_session_models.sql
cli/migrations/agent-trace-repository/: 001_repository_schema.sql
cli/migrations/auth/: 001_create_auth_tokens.sql  002_create_auth_credentials_updated_at_trigger.sql  002_create_auth_tokens_email_index.sql
cli/src/: app.rs  cli_schema.rs  command_surface.rs  dependency_contract.rs  generated_migrations.rs  main.rs  test_support.rs
cli/src/services/: agent_trace.rs  agent_trace_db.rs  app_support.rs  auth.rs  auth_command.rs  bash_policy.rs  capabilities.rs  command_registry.rs  completion.rs  config.rs  default_paths.rs  doctor.rs  error.rs  hooks.rs  hooks_lifecycle.rs  hosted_reconciliation.rs  lifecycle.rs  lifecycle_registry.rs  local_db.rs  local_db_lifecycle.rs  mcp.rs  mod.rs  observability.rs  output_format.rs  patch.rs  repository_identity.rs  resilience.rs  sce_web.rs  security.rs  setup.rs  structured_patch.rs  style.rs  sync.rs  token_storage.rs  trace.rs  version.rs
cli/src/services/agent_trace/: tests.rs
cli/src/services/agent_trace/fixtures/average_age_reconstruction/: golden.json  incremental_01.patch  incremental_02.patch  incremental_03.patch  incremental_06.patch  post_commit.patch
cli/src/services/agent_trace/fixtures/file_rename_reconstruction/: golden.json
cli/src/services/agent_trace/fixtures/hello_world_reconstruction/: golden.json  incremental_01.patch  post_commit.patch
cli/src/services/agent_trace/fixtures/mixed_change_reconstruction/: golden.json  incremental_01.patch  incremental_02.patch
cli/src/services/agent_trace/fixtures/poem_edit_reconstruction/: golden.json  incremental_01.patch  incremental_02.patch  post_commit.patch
cli/src/services/agent_trace/fixtures/poem_write_reconstruction/: golden.json  incremental_01.patch  post_commit.patch
cli/src/services/agent_trace/fixtures/text_file_lifecycle_reconstruction/: golden.json  incremental_01.patch  incremental_02.patch  incremental_04.patch  incremental_05.patch  incremental_07.patch  incremental_10.patch  incremental_11.patch  incremental_12.patch  incremental_13.patch  incremental_14.patch  incremental_15.patch  incremental_19.patch  incremental_20.patch  incremental_21.patch  incremental_22.patch  incremental_23.patch  incremental_26.patch
cli/src/services/agent_trace_db/: lifecycle.rs  mod.rs  repository.rs
cli/src/services/agent_trace_storage/: mod.rs
cli/src/services/auth_command/: command.rs  mod.rs
cli/src/services/auth_db/: lifecycle.rs  mod.rs
cli/src/services/checkout/: mod.rs  registry.rs
cli/src/services/completion/: command.rs  mod.rs
cli/src/services/config/: command.rs  lifecycle.rs  mod.rs  policy.rs  render.rs  resolver.rs  schema.rs  types.rs
cli/src/services/db/: encryption_key.rs  mod.rs
cli/src/services/doctor/: command.rs  fixes.rs  inspect.rs  mod.rs  render.rs  types.rs
cli/src/services/help/: command.rs  mod.rs
cli/src/services/hooks/: claude_transcript.rs  command.rs  lifecycle.rs  mod.rs  tests.rs
cli/src/services/local_db/: lifecycle.rs  mod.rs
cli/src/services/observability/: traits.rs
cli/src/services/parse/: command_runtime.rs  mod.rs
cli/src/services/patch/: tests.rs
cli/src/services/patch/fixtures/average_age_reconstruction/: golden.json  incremental_04.patch  incremental_05.patch  incremental_07.patch
cli/src/services/patch/fixtures/file_rename_reconstruction/: golden.json  post_commit.patch
cli/src/services/patch/fixtures/hello_world_reconstruction/: golden.json
cli/src/services/patch/fixtures/line_and_file_deletion_reconstruction/: golden.json  incremental_01.patch  incremental_02.patch  post_commit.patch
cli/src/services/patch/fixtures/mixed_change_reconstruction/: golden.json  incremental_03.patch  incremental_04.patch  post_commit.patch
cli/src/services/repository_identity/: mod.rs  resolve.rs
cli/src/services/setup/: command.rs  mod.rs  tests.rs
cli/src/services/structured_patch/: tests.rs
cli/src/services/style/: tests.rs
cli/src/services/sync/: command.rs  mod.rs
cli/src/services/trace/: command.rs  discovery.rs  mod.rs  render_list.rs  render_status.rs  render_status_all.rs  shell.rs  stats.rs  status.rs  status_all.rs
cli/src/services/version/: command.rs  mod.rs
cli/tests/: config_precedence_integration.rs  setup_integration.rs
cli/tests/support/: mod.rs
integrations/install/: Cargo.toml
integrations/install/src/: cli.rs  error.rs  harness.rs  main.rs
integrations/install/src/channels/: bun.rs  cargo.rs  mod.rs  npm.rs
integrations/install/src/platform/: mod.rs  unix.rs
(+670 files in other folders)
