[package]
name = "sce"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared Context Engineering CLI scaffold"
license = "Apache-2.0"
repository = "https://github.com/crocoder-dev/shared-context-engineering"
homepage = "https://sce.crocoder.dev"
documentation = "https://sce.crocoder.dev/docs"
readme = "README.md"
keywords = ["cli", "automation", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
hmac = "0.12"
inquire = "0.7"
jsonschema = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = ["rt", "io-util"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["registry"] }
turso = "0"
opentelemetry = { version = "0.28", features = ["trace"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "http-proto", "trace"] }

[dev-dependencies]
portable-pty = "0.8"
regex = "1"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[lints]
workspace = true

[workspace.lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }

[workspace.lints.rust]
warnings = "deny"
