[package]
name = "shared-context-engineering"
version = "0.2.0-pre-alpha-v2"
edition = "2021"
description = "Shared Context Engineering CLI"
license = "Apache-2.0"
repository = "https://github.com/crocoder-dev/shared-context-engineering"
homepage = "https://sce.crocoder.dev"
documentation = "https://sce.crocoder.dev/docs"
readme = "README.md"

[[bin]]
name = "sce"
path = "src/main.rs"

include = [
  "README.md",
  "Cargo.toml",
  "Cargo.lock",
  "build.rs",
  "assets/hooks/**",
  "assets/generated/**",
  "src/**",
]
keywords = ["cli", "automation", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
hmac = "0.12"
inquire = "0.7"
jsonschema = "0.33"
owo-colors = { version = "4", features = ["supports-colors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = ["rt", "io-util"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["registry"] }
opentelemetry = { version = "0.28", features = ["trace"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "http-proto", "trace"] }

[build-dependencies]
sha2 = "0.10"

[lints]
workspace = true

[workspace.lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }

[workspace.lints.rust]
warnings = "deny"
