[package]
name = "shared-context-engineering"
version = "0.3.0-pre-alpha-v5"
edition = "2021"
description = "Shared Context Engineering CLI"
license = "Apache-2.0"
repository = "https://github.com/crocoder-dev/shared-context-engineering"
homepage = "https://sce.crocoder.dev"
documentation = "https://sce.crocoder.dev/docs"
readme = "README.md"

[[bin]]
name = "sce"
path = "src/main.rs"

include = [
  "README.md",
  "Cargo.toml",
  "Cargo.lock",
  "build.rs",
  "assets/hooks/**",
  "assets/generated/**",
  "migrations/**",
  "src/**",
]
keywords = ["cli", "automation", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
turso = { version = "0.7.0-pre.10" }
clap_complete = "4"
dirs = "6"
hmac = "0.13"
inquire = "0.9"
jsonschema = "0.46"
keyring-core = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", default-features = false, features = ["rt", "io-util", "time"] }
tracing = "0.1"

uuid = { version = "1", features = ["v4", "v7"] }
murmur3 = "0.5.2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[build-dependencies]
sha2 = "0.11"

[lints]
workspace = true

[workspace.lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }

[workspace.lints.rust]
warnings = "deny"
