[package]
name = "sce-install-channel-integration-tests"
version = "0.3.0-pre-alpha-v1"
edition = "2021"
publish = false

[[bin]]
name = "install-channel-integration-tests"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fs_extra = "1"
tempfile = "3"
thiserror = "2"
